tests/parsing/smtlib/v2.7/errors/016_sorted_var_bad_sort_1.smt2
(set-logic ALL)
(assert (forall ((x _)) (= x 1)))
